[package]
name = "cess-proofs-tooling"
description = "Tooling for cess-proving-system"
version = "0.1.0"
authors = []
license = "MIT OR Apache-2.0"
publish = false
edition = "2018"
repository = "https://github.com/CESSProject/cess-proving-system"
readme = "README.md"

[dependencies]
storage-proofs-core = { path = "../cess-sp-core", package="cess-sp-core", version = "^0.1.0", default-features = false}
storage-proofs-porep = { path = "../cess-sp-porep", package="cess-sp-porep", version = "^0.1.0", default-features = false }
storage-proofs-post = { path = "../cess-sp-post", package="cess-sp-post", version = "^0.1.0", default-features = false }
cess-proofs = { path = "../cess-proofs", default-features = false }
cess-hashers = { path = "../cess-hashers", default-features = false, features = ["poseidon", "blake2s", "sha256"] }
clap = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
lazy_static = "1.2"
glob = "0.3"
regex = "1.3.7"
commandspec = "0.12.2"
chrono = { version = "0.4.7", features = ["serde"] }
memmap = "0.7.0"
bellperson = "0.18.0"
rand = "0.8"
tempfile = "3.0.8"
cpu-time = "1.0.0"
git2 = "0.13.6"
heim = { git = "https://github.com/heim-rs/heim", rev = "b292f15", features = ["host", "memory", "cpu"] }
async-std = "1.6"
blake2s_simd = "0.5.6"
fil_logger = "0.1"
log = "0.4.8"
uom = "0.30"
merkletree = "0.21.0"
bincode = "1.1.2"
anyhow = "1.0.23"
ff = "0.11.0"
rand_xorshift = "0.3.0"
bytefmt = "0.1.7"
rayon = "1.3.0"
flexi_logger = "0.16.1"
typenum = "1.11.2"
generic-array = "0.14.4"
byte-unit = "4.0.9"
fdlimit = "0.2.0"
dialoguer = "0.8.0"
structopt = "0.3.12"
humansize = "1.1.0"
blstrs = "0.4.0"

[features]
default = ["opencl", "measurements"]
cuda = [
    "storage-proofs-core/cuda",
    "storage-proofs-porep/cuda",
    "storage-proofs-post/cuda",
    "cess-proofs/cuda",
    "bellperson/cuda",
    "cess-hashers/cuda",
]
opencl = [
    "storage-proofs-core/opencl",
    "storage-proofs-porep/opencl",
    "storage-proofs-post/opencl",
    "cess-proofs/opencl",
    "bellperson/opencl",
    "cess-hashers/opencl",
]
measurements = ["storage-proofs-core/measurements"]
profile = ["storage-proofs-core/profile", "measurements"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "8.1.2"
